[project]
name = "xdaq-thorvision-examples"
version = "0.1.0"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"

requires-python = ">=3.6"
dependencies = ["pyxdaq (==0.2.0)", "pythorvision (==0.1.0)"]

[build-system]
requires = ["setuptools>=42.0"]
build-backend = "setuptools.build_meta"
